--- a/index.html
+++ b/index.html
@@ -1,119 +1,104 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRUSTMARKET AI - Transformando el E-commerce Sostenible en LatAm con IA</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <meta name="description" content="Conectamos a consumidores conscientes con productores éticos, usando inteligencia artificial para un futuro más verde y justo.">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TRUSTMARKET AI - Transformando el E-commerce Sostenible en LatAm con IA</title>
+  <meta name="description" content="Conectamos a consumidores conscientes con productores éticos, usando inteligencia artificial para un futuro más verde y justo.">
+  <!-- Estilos base -->
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Estilos n8n Chat -->
+  <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet">
 </head>
 <body>
 
-    <header class="header">
-        <div class="logo">
-            <img src="logo-ecosoften.png" alt="Logo de TRUSTMARKET AI">
-            <span class="logo-text">TRUSTMARKET AI</span>
-        </div>
-        <nav class="nav">
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
-                <li><a href="#soluciones">Soluciones</a></li>
-                <li><a href="#vendedores">Para Vendedores</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
-        <div class="cta-buttons">
-            <a href="#registro" class="btn btn-primary">Regístrate</a>
-            <a href="#productos" class="btn btn-secondary">Explora Productos</a>
-        </div>
-    </header>
-
-    <main class="hero" id="inicio">
-        <div class="hero-content">
-            <h1>Transformando el E-commerce Sostenible en LatAm con IA</h1>
-            <p>Conectamos a consumidores conscientes con productores éticos, usando inteligencia artificial para un futuro más verde y justo.</p>
-            <div class="hero-cta">
-                <a href="#productos" class="btn btn-hero">Comienza a Comprar</a>
-            </div>
-        </div>
-    </main>
-
-    <section class="features" id="soluciones">
-        <h2>Nuestras Características Clave</h2>
-        <div class="feature-grid">
-            <div class="feature-item">
-                <img src="icon-ia.png" alt="Icono de IA">
-                <h3>IA para la Sostenibilidad</h3>
-                <p>Optimizamos rutas y minimizamos el desperdicio usando algoritmos inteligentes.</p>
-            </div>
-            <div class="feature-item">
-                <img src="icon-verified.png" alt="Icono de Verificado">
-                <h3>Productos Verificados</h3>
-                <p>Garantizamos la autenticidad y los certificados ecológicos de cada producto.</p>
-            </div>
-            <div class="feature-item">
-                <img src="icon-local.png" alt="Icono de Local">
-                <h3>Apoyo a Productores Locales</h3>
-                <p>Conectamos compradores con artesanos y pequeños negocios sostenibles.</p>
-            </div>
-        </div>
-    </section>
-
-    <footer class="footer" id="contacto">
-        <p>&copy; 2025 TRUSTMARKET AI. Todos los derechos reservados.</p>
-        <p>¿Tienes preguntas? ¡Habla con nuestro asistente virtual! 👉</p>
-    </footer>
-
-    <!-- CHAT BOT INTEGRADO CON N8N -->
-    <div id="chat-container">
-        <div id="chat-button" title="¡Habla con nuestro asistente virtual!">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-            </svg>
-        </div>
-        <div id="chat-window">
-            <div id="chat-header">
-                <h3>EcoBot</h3>
-                <span id="close-chat" title="Cerrar chat">&times;</span>
-            </div>
-            <div id="chat-body">
-                <div class="message-bot">¡Hola! 👋 Soy EcoBot, tu asistente inteligente de TRUSTMARKET AI. Estoy aquí para ayudarte con información sobre productos sostenibles, vendedores éticos, y todo lo relacionado con nuestro marketplace ecológico. ¿En qué puedo ayudarte hoy?</div>
-            </div>
-            <div id="chat-footer">
-                <input type="text" id="chat-input" placeholder="Escribe tu mensaje..." autocomplete="off">
-                <button id="send-button" type="button">Enviar</button>
-            </div>
-        </div>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="logo">
+      <img src="logo-ecosoften.png" alt="Logo de TRUSTMARKET AI">
+      <span class="logo-text">TRUSTMARKET AI</span>
     </div>
+    <nav class="nav">
+      <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#quienes-somos">¿Quiénes somos?</a></li>
+        <li><a href="#soluciones">Soluciones</a></li>
+        <li><a href="#vendedores">Para Vendedores</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
+    <div class="cta-buttons">
+      <a href="#registro" class="btn btn-primary">Regístrate</a>
+      <a href="#productos" class="btn btn-secondary">Explora Productos</a>
+    </div>
+  </header>
 
-    <!-- Scripts -->
-    <script src="bot.js"></script>
+  <!-- HERO -->
+  <main class="hero" id="inicio">
+    <div class="hero-content">
+      <h1>Transformando el E-commerce Sostenible en LatAm con IA</h1>
+      <p>Conectamos a consumidores conscientes con productores éticos, usando inteligencia artificial para un futuro más verde y justo.</p>
+      <div class="hero-cta">
+        <a href="#productos" class="btn btn-hero">Comienza a Comprar</a>
+      </div>
+    </div>
+  </main>
 
-    <!-- Script adicional para mejorar la experiencia -->
-    <script>
-        // Smooth scrolling para los enlaces del menú
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
+  <!-- FEATURES -->
+  <section class="features" id="soluciones">
+    <h2>Nuestras Características Clave</h2>
+    <div class="feature-grid">
+      <div class="feature-item">
+        <img src="icon-ia.png" alt="Icono de IA">
+        <h3>IA para la Sostenibilidad</h3>
+        <p>Optimizamos rutas y minimizamos el desperdicio usando algoritmos inteligentes.</p>
+      </div>
+      <div class="feature-item">
+        <img src="icon-verified.png" alt="Icono de Verificado">
+        <h3>Productos Verificados</h3>
+        <p>Garantizamos la autenticidad y los certificados ecológicos de cada producto.</p>
+      </div>
+      <div class="feature-item">
+        <img src="icon-local.png" alt="Icono de Local">
+        <h3>Apoyo a Productores Locales</h3>
+        <p>Conectamos compradores con artesanos y pequeños negocios sostenibles.</p>
+      </div>
+    </div>
+  </section>
 
-        // Mostrar una notificación sutil sobre el chat después de 5 segundos
-        setTimeout(() => {
-            const chatButton = document.getElementById('chat-button');
-            if (chatButton && window.getComputedStyle(document.getElementById('chat-window')).display === 'none') {
-                chatButton.style.animation = 'pulse 1s ease-in-out 3';
-            }
-        }, 5000);
-    </script>
+  <!-- FOOTER -->
+  <footer class="footer" id="contacto">
+    <p>&copy; 2025 TRUSTMARKET AI. Todos los derechos reservados.</p>
+    <p>¿Tienes preguntas? ¡Habla con nuestro asistente virtual! 👉</p>
+  </footer>
+
+  <!-- Chat de n8n -->
+  <div id="n8n-chat"></div>
+
+  <script type="module">
+    import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+    createChat({
+      webhookUrl: 'https://israelnr.app.n8n.cloud/webhook/d02dff26-3e87-4802-8861-244e2e97a406/chat',
+      target: '#n8n-chat',
+      mode: 'window',
+      loadPreviousSession: true,
+      defaultLanguage: 'es',
+      initialMessages: [
+        '🌱 ¡Hola! Soy EcoBot 👋, tu asistente de TRUSTMARKET AI.',
+        '✨ Puedo ayudarte a encontrar productos ecológicos, vendedores éticos y resolver tus dudas.',
+        '¿En qué puedo asistirte hoy?'
+      ],
+      i18n: {
+        es: {
+          title: 'EcoBot - Asistente Virtual',
+          subtitle: 'Estamos disponibles 24/7 para ayudarte',
+          getStarted: 'Nueva conversación',
+          inputPlaceholder: 'Escribe tu mensaje...'
+        }
+      }
+    });
+  </script>
 </body>
 </html>
