--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <main class="hero" id="inicio">
   <div class="hero-slider">
     <div class="slide active">
-      <img src="/assets/images/jitomate.jpg" alt="Imagen 1" class="slide-img">
+      <img src="assets/images/jitomate.jpg" alt="Imagen 1" class="slide-img">
       <div class="slide-text">
         <h1>Transformando el E-commerce Sostenible con IA</h1>
         <p>Conectamos a consumidores conscientes con productores éticos, usando inteligencia artificial para un futuro más verde y justo.</p>
@@ -143,7 +143,7 @@
       </div>
     </div>
     <div class="slide">
-      <img src="/assets/images/hero-banner2.jpg" alt="Imagen 2" class="slide-img">
+      <img src="assets/images/hero-banner2.jpg" alt="Imagen 2" class="slide-img">
       <div class="slide-text">
         <h1>Impulsamos la sostenibilidad</h1>
         <p>Conecta con PyMEs y descubre productos ecológicos y éticos.</p>
@@ -157,7 +157,7 @@
       </div>
     </div>
     <div class="slide">
-      <img src="/assets/images/hero-banner3.jpg" alt="Imagen 3" class="slide-img">
+      <img src="assets/images/hero-banner3.jpg" alt="Imagen 3" class="slide-img">
       <div class="slide-text">
         <h1>Marketplace Inteligente</h1>
         <p>Optimiza tus compras con recomendaciones personalizadas mediante IA.</p>
@@ -230,9 +230,17 @@
   text-align: left;
   min-height: 400px;
   width: 100%;
-  background-color: #2c7a7b; /* se ve si la imagen no carga */
+
+  /* Imagen de fondo fija */
+  background-image: url('assets/images/productos.jpg'); /* ruta de tu imagen */
+  background-size: cover;       /* cubre todo el contenedor */
+  background-position: center;  /* centrada */
+  background-repeat: no-repeat; /* no se repita */
+  background-attachment: fixed; /* se mantiene fija al hacer scroll */
+
   color: #fff;
 }
+
 </style>
 
 <script>
