--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ showSlide(currentSlide);
   <script type="module">
     import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
     createChat({
-      webhookUrl: 'https://israelnr.app.n8n.cloud/webhook/d02dff26-3e87-4802-8861-244e2e97a406/chat',
+      webhookUrl: 'https://israelnr2.app.n8n.cloud/webhook/c9b0cd24-6b2c-4550-8890-2cf48ddb2d87/chat',
       target: '#n8n-chat',
       mode: 'window',
       loadPreviousSession: true,
@@ -407,3 +407,4 @@ showSlide(currentSlide);
 
 </body>
 </html>
+
